[package]
name = "alterion-key-exchange"
version = "0.1.0"
authors = ["Alterion Software"]
edition = "2024"
description = "X25519 ECDH key store with timed rotation, grace-window overlap, and HKDF-SHA256 session key derivation."
license = "GPL-3.0"
repository = "https://github.com/Alterion-Software/alterion-rsa-key-manager"

[dependencies]
x25519-dalek = { version = "2", features = ["static_secrets"] }
sha2    = "0.10"
hkdf    = "0.12"
base64  = "0.22"

chrono    = { version = "0.4", features = ["serde"] }
uuid      = { version = "1", features = ["v4"] }
zeroize   = { version = "1.8", features = ["derive"] }
rand      = "0.8"
thiserror = "2"
tracing   = "0.1"
tokio     = { version = "1", features = ["full"] }
